--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
         </section>
 
-        <section class="projetos">
+        <section class="projetos" id="projetos">
             <div class="projeto_titulo">Meus projetos</div>
 
             <article class="container_projetos">
@@ -221,23 +221,23 @@
         </div>
 
         <div class="fale_comigo" data-animar="c">
-            <a href="https://www.facebook.com/janpierry.sousa"><img src="img/facebook.png" alt="fecebook"></a>
+            <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png" alt="fecebook"></a>
         </div>
 
         <div class="fale_comigo" data-animar="c" style="transition-delay: 0.2s;">
-            <a href="https://www.tiktok.com/@janpyweb"><img src="img/tik-tok.png" alt="tiktok"></a>
+            <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tiktok"></a>
         </div>
 
         <div class="fale_comigo" data-animar="c" style="transition-delay: 0.4s;">
-            <a href="https://www.instagram.com/janpyweb/"><img src="img/instagram.png" alt="instagram"></a>
+            <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
         </div>
 
         <div class="fale_comigo" data-animar="c" style="transition-delay: 0.6s;">
-            <a href="https://wa.me/11988806169"><img src="img/whatsapp.png" alt="whatsapp"></a>
+            <a href="https://wa.me/11988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
         </div>
     </div>
 
-    <footer data-animar="b" style="transition-delay: 0.4s;">
+    <footer data-animar="b" style="transition-delay: 0.4s;" id="contato">
         &copy; @janpyweb. Todos os direitos reservados.
     </footer>
 
