alteraçao no footer

--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
     <header class="inicio" data-animar="b">
         <div class="menu_inicio">
             <div class="curriculo">
-                <a href="Curriculo_Janpierry_Santana_Com_Portfolio (1).pdf"
-                   class="botao-download"
-                   data-animar="b"
-                   style="transition-delay: 0.8s;"
-                   download>
-                   📄 Baixar Currículo
+                <a href="Curriculo_Janpierry_Santana_Com_Portfolio (1).pdf" class="botao-download" data-animar="b"
+                    style="transition-delay: 0.8s;" download>
+                    📄 Baixar Currículo
                 </a>
             </div>
 
@@ -72,19 +69,24 @@
 
                 <article class="redes_social">
                     <div class="social" data-animar="c" style="transition-delay: 0.4s;">
-                        <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png" alt="instagram" /></a>
+                        <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png"
+                                alt="instagram" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.6s;">
-                        <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png" alt="facebook" /></a>
+                        <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png"
+                                alt="facebook" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.4s;">
-                        <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tik-tok" /></a>
+                        <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png"
+                                alt="tik-tok" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.6s;">
-                        <a href="https://github.com/janpy011" target="_blank"><img src="img/github.png" alt="github" /></a>
+                        <a href="https://github.com/janpy011" target="_blank"><img src="img/github.png"
+                                alt="github" /></a>
                     </div>
                     <div class="social" data-animar="c" style="transition-delay: 0.8s;">
-                        <a href="https://www.linkedin.com/in/janpierry-santana-sousa-90a494260/" target="_blank"><img src="img/linkedin.png" alt="linkedin" /></a>
+                        <a href="https://www.linkedin.com/in/janpierry-santana-sousa-90a494260/" target="_blank"><img
+                                src="img/linkedin.png" alt="linkedin" /></a>
                     </div>
                 </article>
             </div>
@@ -219,21 +221,24 @@
             <img src="img/gmail.png" alt="gmail">
             <p>janzin2020@gmail.com</p>
         </div>
+        <div class="box__contato">
+            <div class="fale_comigo" data-animar="c">
+                <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png"
+                        alt="fecebook"></a>
+            </div>
 
-        <div class="fale_comigo" data-animar="c">
-            <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png" alt="fecebook"></a>
-        </div>
+            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.2s;">
+                <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tiktok"></a>
+            </div>
 
-        <div class="fale_comigo" data-animar="c" style="transition-delay: 0.2s;">
-            <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tiktok"></a>
-        </div>
+            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.4s;">
+                <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png"
+                        alt="instagram"></a>
+            </div>
 
-        <div class="fale_comigo" data-animar="c" style="transition-delay: 0.4s;">
-            <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
-        </div>
-
-        <div class="fale_comigo" data-animar="c" style="transition-delay: 0.6s;">
-            <a href="https://wa.me/11988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
+            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.6s;">
+                <a href="https://wa.me/11988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
+            </div>
         </div>
     </div>
 
