--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Janpierry Santana" />
     <title>Portfólio | Janpierry</title>
-    <link rel="stylesheet" href="sass/estilo.css" />
+    <link rel="stylesheet" href="estilo/estilo.css" />
     <link rel="shortcut icon" href="img/logo-ofc.ico" type="image/x-icon" />
 </head>
 
@@ -41,8 +41,9 @@
             <div class="conteudo_inicio">
                 <div id="titulo_inicio">
                     <span id="texto-visivel"></span>
-                    <span style="visibility: hidden; position: absolute;">Frontend Developer</span>
+                    <span class="texto-oculto">Frontend Developer</span>
                 </div>
+
 
 
 
@@ -92,7 +93,7 @@
             </div>
 
             <div class="imagem_inicio" data-animar="d" style="transition-delay: 0.8s;">
-                <img src="img/minha_foto.jpg" alt="uma foto minha" />
+                <img src="img/minha-foto.jpg" alt="uma foto minha" />
             </div>
         </section>
 
