--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Janpierry Santana" />
     <title>Portfólio | Janpierry</title>
-    <link rel="stylesheet" href="estilo/estilo.css" />
+    <link rel="stylesheet" href="sass/estilo.css" />
     <link rel="shortcut icon" href="img/logo-ofc.ico" type="image/x-icon" />
 </head>
 
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="botao_inicio">
-                    <a href="https://wa.me/11988806169" target="_blank" data-animar="b"
+                    <a href="https://wa.me/5511988806169" target="_blank" data-animar="b"
                         style="transition-delay: 0.3s;">Entre em contato</a>
                 </div>
 
@@ -238,7 +238,7 @@
             </div>
 
             <div class="fale_comigo" data-animar="c" style="transition-delay: 0.6s;">
-                <a href="https://wa.me/11988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
+                <a href="https://wa.me/5511988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </div>
