--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
     <main>
         <section class="container_inicio">
             <div class="conteudo_inicio">
-                <div id="titulo_inicio">
-                    <span id="texto-visivel"></span>
-                    <span class="texto-oculto">Frontend Developer</span>
-                </div>
-
-
-
+                <h1 id="titulo_inicio"></h1>
 
                 <div class="paragrafo_inicio" data-animar="e" style="transition-delay: 0.2s;">
                     <p>
@@ -169,28 +163,28 @@
                 </div>
             </div>
 
-            <div class="skill" data-animar="e" style="transition-delay: 0.6s;">
+            <div class="skill" data-animar="e" >
                 <span>JavaScript 49%</span>
                 <div class="barra">
                     <div class="progresso javascript" data-porcentagem="49%"></div>
                 </div>
             </div>
 
-            <div class="skill" data-animar="e" style="transition-delay: 0.7s;">
+            <div class="skill" data-animar="e">
                 <span>SASS 75%</span>
                 <div class="barra">
                     <div class="progresso sass" data-porcentagem="75%"></div>
                 </div>
             </div>
 
-            <div class="skill" data-animar="e" style="transition-delay: 0.7s;">
+            <div class="skill" data-animar="e">
                 <span>Bootstrap 65%</span>
                 <div class="barra">
                     <div class="progresso bootstrap" data-porcentagem="65%"></div>
                 </div>
             </div>
 
-            <div class="skill" data-animar="e" style="transition-delay: 0.8s;">
+            <div class="skill" >
                 <span>Figma 35%</span>
                 <div class="barra">
                     <div class="progresso figma" data-porcentagem="35%"></div>
@@ -218,32 +212,32 @@
     </main>
 
     <div class="contatos_">
-        <div class="gmail">
+        <div class="gmail" data-animar="b">
             <img src="img/gmail.png" alt="gmail">
             <p>janzin2020@gmail.com</p>
         </div>
         <div class="box__contato">
-            <div class="fale_comigo" data-animar="c">
+            <div class="fale_comigo">
                 <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png"
                         alt="fecebook"></a>
             </div>
 
-            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.2s;">
+            <div class="fale_comigo">
                 <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tiktok"></a>
             </div>
 
-            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.4s;">
+            <div class="fale_comigo">
                 <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png"
                         alt="instagram"></a>
             </div>
 
-            <div class="fale_comigo" data-animar="c" style="transition-delay: 0.6s;">
+            <div class="fale_comigo">
                 <a href="https://wa.me/5511988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
             </div>
         </div>
     </div>
 
-    <footer data-animar="b" style="transition-delay: 0.4s;" id="contato">
+    <footer id="contato">
         &copy; @janpyweb. Todos os direitos reservados.
     </footer>
 
