alteraçao caminho do projeto barbearia

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             <article class="container_projetos">
                 <article class="_projeto" data-animar="b">
-                    <a href="https://estiloblack.vercel.app/" target="_blank"><img src="img/barbearia.PNG"
+                    <a href="https://barbeariaestilo.vercel.app/" target="_blank"><img src="img/barbearia.PNG"
                             alt="projeto barbearia"></a>
                     <small>Barbearia</small>
                 </article>
