--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
             <div class="projeto_titulo">Meus projetos</div>
 
             <article class="container_projetos">
+
+                <article class="_projeto" data-animar="b">
+                    <a href="https://janpy011.github.io/jogos/" target="_blank"><img src="img/jogos.PNG"
+                            alt="jogos"></a>
+                    <small>Jogos</small>
+                </article>
+
                 <article class="_projeto" data-animar="b">
                     <a href="https://barbeariaestilo.vercel.app/" target="_blank"><img src="img/barbearia.PNG"
                             alt="projeto barbearia"></a>
