jogos icone alterado

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <article class="container_projetos">
 
                 <article class="_projeto" data-animar="b">
-                    <a href="https://janpy011.github.io/jogos/" target="_blank"><img src="img/jogos.PNG"
+                    <a href="https://janpy011.github.io/jogos/" target="_blank"><img class="games" src="img/jogos.PNG"
                             alt="jogos"></a>
                     <small>Jogos</small>
                 </article>
