projeto salao adicionado

--- a/index.html
+++ b/index.html
@@ -214,6 +214,12 @@
                             alt="projeto estudio tatto"></a>
                     <small>Estudio tatto</small>
                 </article>
+
+                <article class="_projeto" data-animar="b">
+                    <a href="https://julianasouza.vercel.app/" target="_blank"><img src="img/salao.PNG"
+                            alt="projeto Salão"></a>
+                    <small>Salão</small>
+                </article>
             </article>
         </section>
     </main>
