--- a/index.html
+++ b/index.html
@@ -43,17 +43,20 @@
 
                 <div class="paragrafo_inicio" data-animar="e" style="transition-delay: 0.2s;">
                     <p>
-                        Sou um jovem de 20 anos, nascido e criado em uma cidade pequena no
-                        sul da Bahia, onde a simplicidade e a criatividade sempre foram
-                        fundamentais. Desde o primeiro contato com a tecnologia, fiquei
-                        fascinado pela sua capacidade de transformar vidas e resolver
-                        problemas. Hoje, dedico-me a aprender e aprimorar minhas
-                        habilidades em desenvolvimento de soluções práticas e criativas,
-                        sempre buscando novas formas de aplicar meus conhecimentos para
-                        fazer a diferença. Com uma mente curiosa e uma paixão por
-                        inovação, estou ansioso para contribuir para o mundo da
-                        tecnologia e criar soluções que possam impactar positivamente a
-                        sociedade.
+                        Sou um jovem de 20 anos, nascido e criado em uma cidade pequena no sul da Bahia.
+                        A simplicidade e a criatividade sempre foram fundamentais na minha formação.
+                    </p>
+                    <p>
+                        Desde o primeiro contato com a tecnologia, fiquei fascinado pela sua capacidade
+                        de transformar vidas e resolver problemas.
+                    </p>
+                    <p>
+                        Hoje, dedico-me a aprender e aprimorar minhas habilidades no desenvolvimento de soluções
+                        práticas e criativas, sempre em busca de inovação.
+                    </p>
+                    <p>
+                        Com uma mente curiosa e paixão por tecnologia, estou determinado a contribuir para
+                        um mundo mais inteligente, impactando positivamente a sociedade.
                     </p>
                 </div>
 
@@ -93,39 +96,39 @@
 
         <section class="sobre_mim" id="sobre">
             <article class="educacao_1" data-animar="d" style="transition-delay: 0.2s;">
-
                 <h3>Sobre mim</h3>
-
-                <p>Nos meus momentos livres, gosto de estar com minha família, pois acredito que são eles minha base e
+                <p>
+                    Nos meus momentos livres, gosto de estar com minha família, pois acredito que são eles minha base e
                     minha motivação diária. Tenho uma mente inquieta, sempre em busca de novos aprendizados, seja no
                     universo da programação ou em qualquer outro campo que possa agregar algo à minha jornada. Encaro os
                     desafios como oportunidades de crescimento e me dedico intensamente a tudo que me proponho a fazer.
                     Sei que nem sempre os resultados vêm como esperamos, mas levo cada experiência como um passo
                     importante no meu desenvolvimento. Minha meta é me tornar um grande programador e contribuir com
                     soluções que realmente façam a diferença. Caminho com determinação, humildade e a certeza de que
-                    cada esforço me aproxima ainda mais do meu objetivo.</p>
+                    cada esforço me aproxima ainda mais do meu objetivo.
+                </p>
             </article>
 
             <article class="educacao_2">
                 <article class="educacao_ensino" data-animar="b" style="transition-delay: 0.5s;">
                     <p>Educação</p>
                     <ul>
-                        <li>• Ensino medio completo</li>
-                        <li>• Analise e Desinvolvimentos de Sistemas (Cursando - Faculdade VINCINT).</li>
+                        <li>• Ensino médio completo</li>
+                        <li>• Análise e Desenvolvimento de Sistemas (Cursando - Faculdade VINCINT).</li>
                     </ul>
                 </article>
 
-                <article educacao_cursos data-animar="b" style="transition-delay: 0.6s;">
+                <article class="educacao_cursos" data-animar="b" style="transition-delay: 0.6s;">
                     <p>Cursos & Certificados</p>
                     <ul>
-                        <li>• Cursando Figma (Undemy)</li>
-                        <li>• Cursando React (Undemy)</li>
-                        <li>• Cursando Typescript (Undemy)</li>
-                        <li>• Cursando Python (Undemy)</li>
-                        <li>• Cursando Sql (Undemy)</li>
-                        <li>• Certificado em Frontend Developer: html, css, javascript (Serliv 112horas).</li>
-                        <li>• Certificado em Programador Web (IF 200horas).</li>
-                        <li>• Certificado em Prompt Responsaveis (Open Academy 8horas)</li>
+                        <li>• Cursando Figma (Udemy)</li>
+                        <li>• Cursando React (Udemy)</li>
+                        <li>• Cursando TypeScript (Udemy)</li>
+                        <li>• Cursando Python (Udemy)</li>
+                        <li>• Cursando SQL (Udemy)</li>
+                        <li>• Certificado em Frontend Developer: HTML, CSS, JavaScript (Serliv - 112 horas).</li>
+                        <li>• Certificado em Programador Web (IF - 200 horas).</li>
+                        <li>• Certificado em Prompt Responsáveis (Open Academy - 8 horas).</li>
                     </ul>
                 </article>
             </article>
@@ -140,7 +143,7 @@
                     <img src="img/github-skills.png" alt="github" data-animar="b" style="transition-delay: 0.5s;">
                     <img src="img/bootstrap.png" alt="bootstrap" data-animar="b" style="transition-delay: 0.6s;">
                     <img src="img/sass.png" alt="sass" data-animar="b" style="transition-delay: 0.7s;">
-                    <img src="img/prompt.png" alt="prompt responsaveis" data-animar="b" style="transition-delay: 0.7s;">
+                    <img src="img/prompt.png" alt="prompt responsáveis" data-animar="b" style="transition-delay: 0.7s;">
                     <img src="img/figma.png" alt="figma" data-animar="b" style="transition-delay: 0.7s;">
                 </article>
             </article>
@@ -163,7 +166,7 @@
                 </div>
             </div>
 
-            <div class="skill" data-animar="e" >
+            <div class="skill" data-animar="e">
                 <span>JavaScript 49%</span>
                 <div class="barra">
                     <div class="progresso javascript" data-porcentagem="49%"></div>
@@ -184,7 +187,7 @@
                 </div>
             </div>
 
-            <div class="skill" >
+            <div class="skill">
                 <span>Figma 35%</span>
                 <div class="barra">
                     <div class="progresso figma" data-porcentagem="35%"></div>
@@ -211,8 +214,8 @@
 
                 <article class="_projeto" data-animar="b" style="transition-delay: 0.2s;">
                     <a href="https://fannytatto.vercel.app/" target="_blank" id="tattoo"><img src="img/tattoo.PNG"
-                            alt="projeto estudio tatto"></a>
-                    <small>Estudio tatto</small>
+                            alt="projeto estúdio tattoo"></a>
+                    <small>Estúdio Tattoo</small>
                 </article>
 
                 <article class="_projeto" data-animar="b">
@@ -232,7 +235,7 @@
         <div class="box__contato">
             <div class="fale_comigo">
                 <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png"
-                        alt="fecebook"></a>
+                        alt="facebook"></a>
             </div>
 
             <div class="fale_comigo">
