formulario e ajustes adicionado

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <li>• Cursando Figma (Udemy)</li>
                         <li>• Cursando React (Udemy)</li>
                         <li>• Cursando TypeScript (Udemy)</li>
-                        <li>• Cursando Python (Udemy)</li>
+                        <li>• Cursando Node.js (Udemy)</li>
                         <li>• Cursando SQL (Udemy)</li>
                         <li>• Certificado em Frontend Developer: HTML, CSS, JavaScript (Serliv - 112 horas).</li>
                         <li>• Certificado em Programador Web (IF - 200 horas).</li>
@@ -153,44 +153,44 @@
             <h2 data-animar="b">Minhas Tecnologias</h2>
 
             <div class="skill" data-animar="e" style="transition-delay: 0.2s;">
-                <span>HTML 85%</span>
+                <span>HTML 95%</span>
                 <div class="barra">
-                    <div class="progresso html" data-porcentagem="85%"></div>
+                    <div class="progresso html" data-porcentagem="95%"></div>
                 </div>
             </div>
 
             <div class="skill" data-animar="e" style="transition-delay: 0.4s;">
-                <span>CSS 80%</span>
+                <span>CSS 90%</span>
                 <div class="barra">
-                    <div class="progresso css" data-porcentagem="80%"></div>
+                    <div class="progresso css" data-porcentagem="90%"></div>
                 </div>
             </div>
 
             <div class="skill" data-animar="e">
-                <span>JavaScript 49%</span>
+                <span>JavaScript 65%</span>
                 <div class="barra">
-                    <div class="progresso javascript" data-porcentagem="49%"></div>
+                    <div class="progresso javascript" data-porcentagem="65%"></div>
                 </div>
             </div>
 
             <div class="skill" data-animar="e">
-                <span>SASS 75%</span>
+                <span>SASS 80%</span>
                 <div class="barra">
-                    <div class="progresso sass" data-porcentagem="75%"></div>
+                    <div class="progresso sass" data-porcentagem="80%"></div>
                 </div>
             </div>
 
             <div class="skill" data-animar="e">
-                <span>Bootstrap 65%</span>
+                <span>Bootstrap 85%</span>
                 <div class="barra">
-                    <div class="progresso bootstrap" data-porcentagem="65%"></div>
+                    <div class="progresso bootstrap" data-porcentagem="85%"></div>
                 </div>
             </div>
 
             <div class="skill">
-                <span>Figma 35%</span>
+                <span>Figma 45%</span>
                 <div class="barra">
-                    <div class="progresso figma" data-porcentagem="35%"></div>
+                    <div class="progresso figma" data-porcentagem="45%"></div>
                 </div>
             </div>
         </section>
@@ -228,29 +228,46 @@
     </main>
 
     <div class="contatos_">
-        <div class="gmail" data-animar="b">
-            <img src="img/gmail.png" alt="gmail">
-            <p>janzin2020@gmail.com</p>
-        </div>
         <div class="box__contato">
             <div class="fale_comigo">
-                <a href="https://www.facebook.com/janpierry.sousa" target="_blank"><img src="img/facebook.png"
-                        alt="facebook"></a>
+                <a href="https://www.facebook.com/janpierry.sousa" target="_blank">
+                    <img src="img/facebook.png" alt="facebook">
+                </a>
             </div>
 
             <div class="fale_comigo">
-                <a href="https://www.tiktok.com/@janpyweb" target="_blank"><img src="img/tik-tok.png" alt="tiktok"></a>
+                <a href="https://www.tiktok.com/@janpyweb" target="_blank">
+                    <img src="img/tik-tok.png" alt="tiktok">
+                </a>
             </div>
 
             <div class="fale_comigo">
-                <a href="https://www.instagram.com/janpyweb/" target="_blank"><img src="img/instagram.png"
-                        alt="instagram"></a>
+                <a href="https://www.instagram.com/janpyweb/" target="_blank">
+                    <img src="img/instagram.png" alt="instagram">
+                </a>
             </div>
 
             <div class="fale_comigo">
-                <a href="https://wa.me/5511988806169" target="_blank"><img src="img/whatsapp.png" alt="whatsapp"></a>
+                <a href="https://wa.me/5511988806169" target="_blank">
+                    <img src="img/whatsapp.png" alt="whatsapp">
+                </a>
             </div>
         </div>
+
+        <form class="formulario_contato" action="https://formsubmit.co/seu-email@email.com" method="POST"
+            id="form-contato">
+            <h2>Entre em contato</h2>
+            <input type="text" name="name" placeholder="Seu nome" required>
+            <input type="email" name="email" placeholder="Seu e-mail" required>
+            <textarea name="message" placeholder="Sua mensagem"></textarea>
+            <input type="hidden" name="_captcha" value="false">
+            <button type="submit">Enviar</button>
+            <p class="mensagem-sucesso" id="msg-sucesso">Mensagem enviada com sucesso! Em breve entro em contato.</p>
+        </form>
+
+    </div>
+
+
     </div>
 
     <footer id="contato">
