ajuste layot atualizado

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     </header>
 
     <div id="stars"></div>
-    
+
     <main>
         <section class="container_inicio">
             <div class="conteudo_inicio">
                 <h1 id="titulo_inicio"></h1>
 
                 <div class="paragrafo_inicio" data-animar="e" style="transition-delay: 0.2s;">
-                    <p>Programador front-end, futuro fullstack.</p>
+                    <p>Programador front-end e futuro fullstack.</p>
                 </div>
 
                 <div class="botao_inicio">
